Implement LINUX_TIOCSCTTY.

PR: kern/42404